[package]
name = "blkpath"
version = "0.1.0"
edition = "2021"
authors = ["SF-Zhou"]
description = "Resolve the underlying block device path from a file path or file descriptor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SF-Zhou/blkpath"
keywords = ["block-device", "filesystem", "linux", "storage"]
categories = ["filesystem", "os::linux-apis"]
readme = "README.md"

[lib]
name = "blkpath"
path = "src/lib.rs"

[[bin]]
name = "blkpath"
path = "src/bin/blkpath.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
